fixed some alignment issues on mobile view, got rid of title on home page since it was redundent and centered loading spinner on mobile view.

--- a/client/src/components/Layout/Layout.scss
+++ b/client/src/components/Layout/Layout.scss
@@ -93,7 +93,10 @@
         display: none;
       }
     }
-  
+    .loader {
+      margin-left: 60%;
+    }
+
     .container {
       position: initial;
       height: auto;
@@ -105,6 +108,7 @@
       &.about-page,
       &.home-page,
       &.proj {
+
         .text-zone {
           position: initial;
           transform: none;
@@ -136,6 +140,7 @@
         }
       }
       .stage-cube-cont {
+        visibility: hidden;
         position: inherit;
         width: 100%;
         height: 0%;
